--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,6 @@ code {
 }
 
 .font-Inter-Tight{
-  font-family: -apple-system,BlinkMacSystemFont,Arial,sans-serif;;
+  font-family: -apple-system,BlinkMacSystemFont,Arial,sans-serif;
+  color: #76411f;
 }
