--- a/src/pages/components/css/Render.css
+++ b/src/pages/components/css/Render.css
@@ -15,10 +15,10 @@ h3 button {
  opacity: 0;
 }
 
-button svg {
+/* button svg {
 height: 1em;
 margin: 0 0.5em;
-}
+} */
 
 .hiddenDiv{
     margin: 0 15px;
@@ -33,17 +33,14 @@ margin: 0 0.5em;
 
 @keyframes scrollDown {
     from {
-        height: 0%;
+        height: 0;
     }
-    /* 50% {
-        height: 50%;
-    } */
     to {
-        height: 100%;
+        height: auto;
     }
 }
 
-.spinnerSvg {
+/* .spinnerSvg {
     animation: 1s spinnerSvg ease;
 }
 
@@ -54,5 +51,33 @@ margin: 0 0.5em;
     100%{
         transform: rotate(180deg);
     }
+} */
+.checkImg{
+    height: 20px;
+    width: 20px;
+    margin: 0 0.5em
+}
+.checkImg-rotate{
+    transform: rotate(270deg);
+
+}
+.spinnerImg {
+    animation: 1s spinnerImg ease;
 }
 
+
+@keyframes spinnerImg {
+    from{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(270deg);
+    }
+}
+
+.closeThisDiv{
+    border-radius: 15px;
+    color: black;
+    background-color: green;
+    
+}
